--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "filesdsl"
 version = "0.1.0"
@@ -10,3 +14,6 @@ dependencies = [
 
 [project.scripts]
 filesdsl = "filesdsl.__main__:main"
+
+[tool.setuptools.packages.find]
+include = ["filesdsl", "filesdsl.*"]
