--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ dependencies = [
     "pymupdf>=1.26.4",
     "python-docx>=1.2.0",
     "python-pptx>=1.0.2",
+    "chromadb>=0.5.23",
 ]
 
 [project.scripts]
 filesdsl = "filesdsl.__main__:main"
+fdsl = "filesdsl.__main__:main"
 
 [tool.setuptools.packages.find]
 include = ["filesdsl", "filesdsl.*"]
