--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "pymupdf>=1.26.4",
     "python-docx>=1.2.0",
     "python-pptx>=1.0.2",
-    "chromadb>=0.5.23",
+    "faiss-cpu>=1.12.0",
+    "numpy>=2.1.0",
+    "pytesseract>=0.3.13",
+    "Pillow>=11.3.0",
 ]
 
 [project.scripts]
